--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 			<button type="button" class="button">Outlook</button>
 			<button type="button" class="button">Magister</button>
 			<button type="button" class="button">Zermelo</button>
+			<form action="https://google.com">
+    				<input type="submit" value="Go to Google" />
+			</form>
 		</body>
 
  		<footer>
