--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	</head>
 		<body>
 			<button type="button" class="button">Outlook</button>
-			<button type="button" class="button">Magister</button>
-			<button type="button" class="button">Zermelo</button>
-			<form action="https://google.com">
+			<button type="button" class="button">Magister <form action="https://google.com">
     				<input type="submit" value="Go to Google" />
-			</form>
+			</form></button>
+			<button type="button" class="button">Zermelo</button>
+			
 		</body>
 
  		<footer>
