--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	</head>
 		<body>
 			<button type="button" class="button">Outlook</button>
-			<button type="button" class="button">Magister <form action="https://google.com">
-    				<input type="submit" value="Go to Google" />
-			</form></button>
+			<button type="button" class="button">Magister</button>
 			<button type="button" class="button">Zermelo</button>
+			<form action="https://google.com" class="button">
+    				<input type="submit" value="Go to Google" />
+			</form>
 			
 		</body>
 
