--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
 			<link rel="stylesheet" href="style.css" />
 	</head>
 		<body>
-			<button type="button" class="button">Outlook</button>
-			<button type="button" class="button">Magister</button>
+			<button type="button" class="button" onclick:"">Outlook</button>
+			<button type="button" class="button" onclick:"https://cvo-nf.magister.net">Magister</button>
 			<button type="button" class="button">Zermelo</button>
-			<form action="https://google.com" class="button">
-    				<input type="submit" value="Go to Google" />
-			</form>
-			
 		</body>
 
  		<footer>
