--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			<link rel="stylesheet" href="style.css" />
 	</head>
 		<body>
-			<button type="button" class="button" onclick:"">Outlook</button>
-			<button type="button" class="button" onclick:"location.href='https://cvo-nf.magister.net';">Magister</button>
+			<button type="button" class="button">Outlook</button>
+			<button type="button" class="button" onclick="location.href='https://cvo-nf.magister.net';">Magister</button>
 			<button type="button" class="button">Zermelo</button>
 		</body>
 
