--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 		<body>
 			<button type="button" class="button">Outlook</button>
-			<button type="button" class="button" onclick="location.href='https://cvo-nf.magister.net';">Magister</button>
+			<button type="button" class="button" onclick="window.open('https://cvo-nf.magister.net', '_blank');">Magister</button>
 			<button type="button" class="button">Zermelo</button>
 		</body>
 
