--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<link rel="stylesheet" href="style.css" />
 	</head>
 		<body>
-			<button type="button" class="button" onclick="window.open('https://outlook.office.com', '_blank');">Outlook</button>
+			<button type="button" class="button" onclick="window.open('https://outlook.office.com/owa/?realm=cgbn.nl', '_blank');">Outlook</button>
 			<button type="button" class="button" onclick="window.open('https://cvo-nf.magister.net', '_blank');">Magister</button>
 			<button type="button" class="button" onclick="window.open('https://cvo-nf.zportal.nl/', '_blank');">Zermelo</button>
 		</body>
