--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <html lang="en-US">
+
 	<head>
+
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
+
 	<title>CGBN</title>
 
 			<link
 			href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One"
 			rel="stylesheet" />
 			<link rel="stylesheet" href="style.css" />
+
 	</head>
-		<body>
-			<button type="button" class="button" onclick="window.open('https://outlook.office.com/owa/?realm=cgbn.nl', '_blank');">Outlook</button>
-			<button type="button" class="button" onclick="window.open('https://cvo-nf.magister.net', '_blank');">Magister</button>
-			<button type="button" class="button" onclick="window.open('https://cvo-nf.zportal.nl/', '_blank');">Zermelo</button>
-		</body>
+
+
+	<body>
+
+		<header class="header">
+
+			<div class="cgbn-logo"><img src="https://cgbeyersnaude.github.io/CGBN/content/cgbn_logo.png" width="100px" height="auto"></div>
+
+		</header>
+
+		<button type="button" class="button" onclick="window.open('https://outlook.office.com/owa/?realm=cgbn.nl', '_blank');">Outlook</button>
+		<button type="button" class="button" onclick="window.open('https://cvo-nf.magister.net', '_blank');">Magister</button>
+		<button type="button" class="button" onclick="window.open('https://cvo-nf.zportal.nl/', '_blank');">Zermelo</button>
+
+	</body>
+
 </html>
