--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
 			<div class="cgbn-logo"><img src="https://cgbeyersnaude.github.io/CGBN/content/cgbn_logo.png" width="100px" height="auto"></div>
 
 		</header>
+		
+		<div class="button-container">
 
 		<button type="button" class="button" onclick="window.open('https://outlook.office.com/owa/?realm=cgbn.nl', '_blank');">Outlook</button>
 		<button type="button" class="button" onclick="window.open('https://cvo-nf.magister.net', '_blank');">Magister</button>
 		<button type="button" class="button" onclick="window.open('https://cvo-nf.zportal.nl/', '_blank');">Zermelo</button>
+
+		</div>
 
 	</body>
 
