--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 		<style>
 
 			body {
-    			display: flex;
-   			 	overflow-x: hidden;
+				overflow-x: hidden;
 				overflow-y: hidden;
+			}
+
+			.main-container {
+    			display: flex;
 				flex-flow: column;
 				height: 100vh;
 			}
@@ -64,17 +67,17 @@
 	</head>
 
 	<body>
-	
-		<header><img src="content/cgbn_logo.png" alt="" class="cgbn-logo"></header>
-		
-		<section class="button-section">
+		<div class="main-container">
+			<header><img src="content/cgbn_logo.png" alt="" class="cgbn-logo"></header>
+			
+			<section class="button-section">
 
-			<button class="button-class" onclick="window.open('https://outlook.office.com/owa/?realm=cgbn.nl', '_blank');">outlook</button>
-			<button class="button-class" onclick="window.open('https://cvo-nf.magister.net', '_blank');">magister</button>
-			<button class="button-class" onclick="window.open('https://cvo-nf.zportal.nl/', '_blank');">zermelo</button>
+				<button class="button-class" onclick="window.open('https://outlook.office.com/owa/?realm=cgbn.nl', '_blank');">outlook</button>
+				<button class="button-class" onclick="window.open('https://cvo-nf.magister.net', '_blank');">magister</button>
+				<button class="button-class" onclick="window.open('https://cvo-nf.zportal.nl/', '_blank');">zermelo</button>
 
-		</section>
-
+			</section>
+		</div>
 	</body>
 
 </html>
