--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 			}
 
 			.cgbn-logo {
-				
  			  	width: 100px;
   				height: auto;
 			}
@@ -68,8 +67,14 @@
 
 	<body>
 		<div class="main-container">
-			<header><img src="content/cgbn_logo.png" alt="" class="cgbn-logo"></header>
+			<header>
+				<img src="content/cgbn_logo.png" alt="" class="cgbn-logo">
+			</header>
 			
+			<section style="align-items: center; justify-content: center; margin-bottom: -100px; align-self: center;">
+				<img src="content/dekker-hoofd.png" alt="" style="height: 100px; width: auto;">
+			</section>
+
 			<section class="button-section">
 
 				<button class="button-class" onclick="window.open('https://outlook.office.com/owa/?realm=cgbn.nl', '_blank');">outlook</button>
