--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 				<img src="content/cgbn_logo.png" alt="" class="cgbn-logo">
 			</header>
 			
-			<section style="align-items: center; justify-content: center; margin-bottom: -100px; align-self: center;">
+			/* <section style="align-items: center; justify-content: center; margin-bottom: -100px; align-self: center;">
 				<img src="content/dekker-hoofd.png" alt="" style="height: 100px; width: auto;">
-			</section>
+			</section> */
 
 			<section class="button-section">
 
