--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 		</div>
 
 		<div class="hamburger-menu-container">
+			<!-- Titel van de site ofzo -->
+			<div class="hamburger-spacer"></div>
 
 			<a href="https://www.beyersnaude.nl/">Officiële site</a>
 
+			<div class="hamburger-spacer"></div>
+			<!-- Beschrijving van de site -->
 		</div>
 
 		<script src="main.js"></script>
