--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 
-	<body>
+	<body class="light-mode">
 		<div class="main-container">
 			<header class="header-class">
 				<img src="content/cgbn_logo.png" alt="" class="cgbn-logo">
