--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</section>
 		</div>
 
-		<div class="hamburger-menu-container">
+		<div class="hamburger-menu-container closing">
 			<!-- Titel van de site ofzo -->
 			<div class="hamburger-spacer"></div>
 
