--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 
-	<body class="light-mode">
+	<body>
 		<div class="main-container">
 			<header class="header-class">
 				<img src="content/cgbn_logo.png" alt="" class="cgbn-logo">
@@ -25,7 +25,7 @@
 
 			</section>
 		</div>
-		
+
 		<div class="hamburger-menu-container-container">
 
 		<div class="hamburger-menu-container">
