--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 				<div class="hamburger-spacer"></div>
 				<!-- Beschrijving van de site -->
+				<button class="theme-button"><span class="material-symbols-outlined">dark_mode</span></button>
 			</div>
 
 		</div>
